fix saut de ligne sec-button mobile (small)

--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,11 @@ boutons
   box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2);
   border-radius: 1.5rem;
 }
+@media screen and (max-width: 320px) {
+  .secondary-button, .secondary-button--active {
+    font-size: 0.9rem;
+  }
+}
 .secondary-button .fas, .secondary-button--active .fas {
   margin-right: 1rem;
   margin-left: -1rem;
